--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "koekie",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "The only cookie manager you need for your JS applications, for only 330 bytes.",
   "main": "./dist/koekie.js",
   "scripts": {
+    "prepublish": "npm run build",
     "build": "microbundle -o ./dist",
     "local": "microbundle -o ./local --compress false",
     "check": "microbundle -o ./dist --compress false",
